Start out the job of parsing contracts with some skele.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
 proc_macro = true
 
 [dependencies]
-syn = "*"
+syn = { version = "*", features = ["full"] }
 quote = "*"
 
